# lvquick

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
devlogs/: devlog-02.md  devlog-04.md  devlog-05.md  devlog-06.md  devlog-07.md  devlog-10.md  devlog-11.md  devlog-12.md  devlog-14.md  devlog-15.md
docs/: architecture.md  changelog.md  roadmap.md  testing.md
fuzz/: Cargo.toml
src/: main.rs
src/core/: kani_proofs.rs  mod.rs  skel.rs  tests.rs
src/exec/: mod.rs  provision.rs  tests.rs
src/parser/: mod.rs
src/planner/: mod.rs  provision.rs
src/verifier/: mod.rs  provision.rs  tests.rs
